Ajustes para upload de arquivo (sem mapeamento ainda)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=entomodata
 
+# Aumentar o tamanho de upload de arquivos para 20MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
 # ------ Configuração do H2 ------
 
 # Diz ao Spring para usar o banco H2
