Usando banco de dados em arquivo, não mais em memoria.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,22 @@
 spring.application.name=entomodata
 
-# Aumentar o tamanho de upload de arquivos para 20MB
+# Upload de Arquivos
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-# ------ Configuração do H2 ------
+# ------ Configuração do H2 (Modo Arquivo) ------
 
-# Diz ao Spring para usar o banco H2
-spring.datasource.url=jdbc:h2:mem:colecaodb
+# MUDANÇA CHAVE: 'file:./dados/colecao'
+# Isso cria uma pasta 'dados' ao lado do seu arquivo .jar e salva tudo lá.
+spring.datasource.url=jdbc:h2:file:./dados/colecaodb;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Diz ao JPA (Hibernate) para criar as tabelas automaticamente
+# O 'update' mantém os dados entre reinicializações
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
 
-# Habilita o "Console do H2" para você ver o banco no navegador
+# Console H2 (para você ver o banco se precisar)
 spring.h2.console.enabled=true
