Correção de contrução do banco de dados.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,17 @@
 spring.application.name=entomodata
 
-# Upload de Arquivos
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 # ------ Configuração do H2 (Modo Arquivo) ------
 
-# MUDANÇA CHAVE: 'file:./dados/colecao'
-# Isso cria uma pasta 'dados' ao lado do seu arquivo .jar e salva tudo lá.
-spring.datasource.url=jdbc:h2:file:./dados/colecaodb;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:./dados/colecaodb;AUTO_SERVER=TRUE
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# O 'update' mantém os dados entre reinicializações
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Console H2 (para você ver o banco se precisar)
 spring.h2.console.enabled=true
